--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-ide-helper": "dev-master",
         "fideloper/proxy": "~3.3",
         "hieu-le/active": "^3.5",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "barryvdh/laravel-ide-helper":"dev-master"
+        "mews/captcha": "~2.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
