--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,13 @@
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
+        "doctrine/dbal": "~2.3",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
-        "symfony/thanks": "^1.0",
-        "doctrine/dbal": "~2.3"
+        "summerblue/generator": "~0.5",
+        "symfony/thanks": "^1.0"
     },
     "autoload": {
         "classmap": [
