--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "~3.1",
         "doctrine/dbal": "~2.3",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
