--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
         "laravel/framework": "5.5.*",
+        "laravel/horizon": "~1.0",
         "laravel/tinker": "~1.0",
         "mews/captcha": "~2.0",
         "mews/purifier": "~2.0",
@@ -19,6 +20,7 @@
         "overtrue/pinyin": "~3.0",
         "predis/predis": "^1.1",
         "spatie/laravel-permission": "~2.7",
+        "summerblue/administrator": "~1.1",
         "viacreative/sudo-su": "^1.1"
     },
     "require-dev": {
