--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "guzzlehttp/guzzle": "~6.3",
         "hieu-le/active": "~3.5",
         "intervention/image": "^2.4",
+		"jpush/jpush": "^3.5",
         "laravel/framework": "5.5.*",
         "laravel/horizon": "~1.0",
         "laravel/tinker": "~1.0",
@@ -34,6 +35,7 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
+        "overtrue/laravel-query-logger": "^1.0",
         "phpunit/phpunit": "~6.0",
         "summerblue/generator": "~0.5"
     },
